--- a/views/peliculas/peliculas.html
+++ b/views/peliculas/peliculas.html
@@ -188,10 +188,13 @@
                                 <p> El este y el oeste se encuentran nuevamente cuando el asesinato del embajador Ha provoca la reunión de Lee y Carter.
                                 </p>
                                 <div class="botones">
-                                    <button class="ver">Ver</button>
                                     <button class="verTrailer">
                                         Ver Trailer
                                     </button>
+                                    <div class="video-container">
+                                        <span class="close">X</span>
+                                        <video src="/Public/contenido/trailers/Peliculas/rushHour3.mp4" controls></video>
+                                    </div>
                                 </div>
                             </div>
                         </figure>
@@ -205,10 +208,13 @@
                                 <p> Cuando John Bennett era un niño pequeño, pidió el deseo de que Ted, su querido oso de peluche, cobrara vida.
                                 </p>
                                 <div class="botones">
-                                    <button class="ver">Ver</button>
                                     <button class="verTrailer">
                                         Ver Trailer
                                     </button>
+                                    <div class="video-container">
+                                        <span class="close">X</span>
+                                        <video src="/Public/contenido/trailers/Peliculas/ted.mp4" controls></video>
+                                    </div>
                                 </div>
                             </div>
                         </figure>
@@ -222,10 +228,13 @@
                                 <p> Dos socorristas, el veterano Mitch Buchannon y el joven y arrogante Matt Brody, deben detener a unos criminales que amenazan el futuro de la bahía en la que trabajan. Mientras colaboran aprenderán a respetarse mutuamente, dado que el comienzo de su relación profesional ha sido complicado
                                 </p>
                                 <div class="botones">
-                                    <button class="ver">Ver</button>
                                     <button class="verTrailer">
                                         Ver Trailer
                                     </button>
+                                    <div class="video-container">
+                                        <span class="close">X</span>
+                                        <video src="/Public/contenido/trailers/Peliculas/baywatch.mp4" controls></video>
+                                    </div>
                                 </div>
                             </div>
                         </figure>
@@ -239,10 +248,13 @@
                                 <p> Los veteranos agentes Mike Lowery y Marcus Burnett vuelven a colaborar para detener a Armando Armas, el violento líder de un cartel de la droga afincado en Miami. En esta ocasión, los apoya el equipo AMMO, un grupo de élite del Departamento de Policía de Miami.
                                 </p>
                                 <div class="botones">
-                                    <button class="ver">Ver</button>
                                     <button class="verTrailer">
                                         Ver Trailer
                                     </button>
+                                    <div class="video-container">
+                                        <span class="close">X</span>
+                                        <video src="/Public/contenido/trailers/Peliculas/badBoysForLife.mp4" controls></video>
+                                    </div>
                                 </div>
                             </div>
                         </figure>
@@ -256,10 +268,13 @@
                                 <p> Cuando un policía veterano pone a prueba a su futuro cuñado, un recluta dispuesto a demostrar que es más que un adicto a los videojuegos, ambos deben enfrentar al criminal más peligroso de Atlanta.
                                 </p>
                                 <div class="botones">
-                                    <button class="ver">Ver</button>
                                     <button class="verTrailer">
                                         Ver Trailer
                                     </button>
+                                    <div class="video-container">
+                                        <span class="close">X</span>
+                                        <video src="/Public/contenido/trailers/Peliculas/rideAlong.mp4" controls></video>
+                                    </div>
                                 </div>
                             </div>
                         </figure>
@@ -297,10 +312,13 @@
                                 <p> Luego de ser mordido por una araña radioactiva, el joven Miles Morales desarrolla misteriosos poderes que lo transforman en el Hombre Araña. Ahora deberá usar sus nuevas habilidades ante el malvado Kingpin, un enorme demente que puede abrir portales hacia otros universos
                                 </p>
                                 <div class="botones">
-                                    <button class="ver">Ver</button>
                                     <button class="verTrailer">
                                         Ver Trailer
                                     </button>
+                                    <div class="video-container">
+                                        <span class="close">X</span>
+                                        <video src="/Public/contenido/trailers/Peliculas/spiderman-IntoTheSpiderverse.mp4" controls></video>
+                                    </div>
                                 </div>
                             </div>
                         </figure>
@@ -314,10 +332,13 @@
                                 <p> El Gato con Botas descubre que, debido a su pasión por la aventura, ha gastado ya 8 de sus 9 vidas. Por tanto, emprende un peligroso viaje en busca del legendario Último Deseo para solicitar que le restauren las vidas que ya perdió.
                                 </p>
                                 <div class="botones">
-                                    <button class="ver">Ver</button>
                                     <button class="verTrailer">
                                         Ver Trailer
                                     </button>
+                                    <div class="video-container">
+                                        <span class="close">X</span>
+                                        <video src="/Public/contenido/trailers/Peliculas/pussInBoots-TheLastWish.mp4" controls></video>
+                                    </div>
                                 </div>
                             </div>
                         </figure>
@@ -331,10 +352,13 @@
                                 <p> Después de reunirse con Gwen Stacy, el amigable vecino de tiempo completo de Brooklyn Spiderman, es lanzado a través del multiverso, donde se encuentra a un equipo de gente araña encomendada con proteger su mera existencia.
                                 </p>
                                 <div class="botones">
-                                    <button class="ver">Ver</button>
                                     <button class="verTrailer">
                                         Ver Trailer
                                     </button>
+                                    <div class="video-container">
+                                        <span class="close">X</span>
+                                        <video src="/Public/contenido/trailers/Peliculas/spiderman-AcrossTheSpiderverse.mp4" controls></video>
+                                    </div>
                                 </div>
                             </div>
                         </figure>
@@ -348,10 +372,13 @@
                                 <p> Una joven colombiana puede ser la última esperanza para su familia, cuando descubre que la magia que rodea a Encanto, un lugar encantado que bendice a los niños con dones únicos, se encuentra en serio peligro.
                                 </p>
                                 <div class="botones">
-                                    <button class="ver">Ver</button>
                                     <button class="verTrailer">
                                         Ver Trailer
                                     </button>
+                                    <div class="video-container">
+                                        <span class="close">X</span>
+                                        <video src="/Public/contenido/trailers/Peliculas/encanto.mp4" controls></video>
+                                    </div>
                                 </div>
                             </div>
                         </figure>
@@ -365,10 +392,13 @@
                                 <p> Un ogro llamado Shrek vive en su pantano, pero su preciada soledad se ve súbitamente interrumpida por la invasión de los ruidosos personajes de los cuentos de hadas. Todos fueron expulsados de sus reinos por el malvado Lord Farquaad.
                                 </p>
                                 <div class="botones">
-                                    <button class="ver">Ver</button>
                                     <button class="verTrailer">
                                         Ver Trailer
                                     </button>
+                                    <div class="video-container">
+                                        <span class="close">X</span>
+                                        <video src="/Public/contenido/trailers/Peliculas/shrek.mp4" controls></video>
+                                    </div>
                                 </div>
                             </div>
                         </figure>
