--- a/Public/css/style.css
+++ b/Public/css/style.css
@@ -1,21 +1,21 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap");
 
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: 'Roboto';
+    font-family: "Roboto";
 }
 
 body {
     background-image: url(/Public/contenido/img/Main/fondoPagina.jpg);
 }
 
-header {
+#navDefault {
     position: sticky;
     top: 0;
     width: 100%;
-    height: 80px; 
+    height: 80px;
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -46,12 +46,11 @@ header {
 .menu ul {
     list-style: none;
     display: flex;
-    
 }
 
 .menu li a:hover {
     color: rgb(48, 184, 218);
-    transition: .5s ease-in;
+    transition: 0.5s ease-in;
 }
 
 .principalNav a {
@@ -79,73 +78,165 @@ header {
 .submenu li a {
     display: block;
     padding: 15px;
-    margin: 0 25px ;
+    margin: 0 25px;
     width: 135px;
 }
 
 .menu li:hover .submenu {
     visibility: visible;
     opacity: 1;
-    
 }
 
+#hamburguesa {
+    display: none;
+}
 
+@media screen and (max-width: 767px) {
+    #navDefault {
+        display: none;
+    }
 
-@media screen and (max-width:767px) {
-    header {
-        height: auto;
-        display: grid;
-        padding: 0;
-        margin: 0;
+    #hamburguesa {
+        width: 50%;
+        height: 60px;
+        display: block;
+        position: fixed;
+        top: 0;
+    }
+
+    .hamburguesaActive {
+        background-color: rgba(48, 48, 48, 0.589);
+        height: 85vh !important;
+        display: grid !important;
+        grid-template-rows: 10% 90% !important;
+        z-index: 999 !important;
+        position: fixed;
+        top: 0;
         width: 100%;
+    }
+
+    #navBurguer {
+        display: grid;
+        grid-template-rows: 80% 20%;
+        grid-template-columns: 100%;
+        visibility: hidden;
+    }
+
+    .navBurguerActive {
+        visibility: visible !important;
+        transition: 1s ease;
+    }
+
+    #btnBurguer {
+        width: 100%;
+        height: 100%;
+        background-color: transparent;
+        border: none;
+        display: grid;
+        grid-template-columns: 10% 10% 80%;
+        place-items: center;
+        padding: 10px;
+    }
+
+    #imgHamburguesa {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+        filter: invert(100%);
+        -webkit-filter: invert(100%);
+}
+
+    .imgHamburguesaActive {
+        display: none;
+    }
+
+    #imgClose {
+        width: 100%;
+        height: 50%;
+        object-fit: contain;
+        display: none;
+    }
+
+    .imgXActive {
+        display: block !important;
+        filter: invert(100%);
+    }
+
+    .menuBurguer {
+        display: grid;
+        grid-template-rows: repeat(4, 15%);
+        grid-template-columns: 100%;
         place-content: center;
+        
+    }
+
+    .menuBurguer li {
+        width: 80%;
+        height: 100%;
+        list-style: none;
+        margin: auto;
+    }
+
+    .menuBurguer li a {
+        text-decoration: none;
+        text-transform: capitalize;
+        color: #fff ;
+        display: flex;
+        justify-content: center;
+    }
+
+    .menuBurguer li:hover .submenuHamburguer {
+        visibility: visible;
+    }
+
+    .menuBurguer li a:hover {
+        color: rgb(63, 210, 236);
+        transition: 0.2s ease-in;
+        -webkit-transition: 0.2s ease-in;
+        -moz-transition: 0.2s ease-in;
+        -ms-transition: 0.2s ease-in;
+        -o-transition: 0.2s ease-in;
+}
+
+    .submenuHamburguer {
+        visibility: hidden;
+        height: 200px;
+        display: grid;
+        grid-template-rows: repeat(3, 10%);
+        grid-template-columns: 100%;
+        row-gap: 1%;
+    }
+
+    .submenuHamburguer li {
+        width: 100%;
+        height: 100%;
+    }
+
+    .submenuHamburguer li a {
+        padding-top: 10px;
+        color: #fff !important;  
+    }
+
+    #infoCompany {
+        display: grid;
         place-items: center;
     }
-    .menu {
-        width: 100%;
-        display: flex;
-        justify-content: space-around;
-        flex-wrap: wrap;
-    }
 
-    .menu li {
-        width: 25%;
-    }
-
-    .menu li a {
-        margin: 0;
-        padding: 0;
-    }
-
-    .submenu {
-        display: grid;
-        grid-template-rows: repeat(3,30%);
-        width: 150%;;
-    }
-
-    .submenu li {
-        width: 100%;
+    #buscadorBurguer {
+        width: 80% ;
+        height: 40% ;
+        margin: auto;
+        border-radius: 20px;
+        border: none;
         padding: 5px;
+        box-shadow: 1px 2px 5px rgb(63, 210, 236);
+        
     }
-
-    #buscador {
-        width: 80%;
-    }
-
-    #loupe {
-        display: none;
-    }
-
-    #logo {
-        display: none;
-    }
-
-
-
 }
 
-@media screen and (min-width: 767px) and (max-width:1023px) {
-    header {
+
+@media screen and (min-width: 767px) and (max-width: 1023px) {
+    #navDefault {
         margin: 0;
         padding: 0;
         display: grid;
