--- a/views/peliculas/peliculas.html
+++ b/views/peliculas/peliculas.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="../../Public/css/normalize.css">
         <link rel="stylesheet" href="../../Public/css/style.css" />
         <link rel="shortcut icon" href="Public/contenido/img/Logos/logoEmpresa.png" type="image/x-icon">
         <title>start voyage</title>
@@ -13,7 +14,7 @@
                 <ul class="menu">
                     <li><a href="../../index.html">Inicio</a></li>
                     <li>
-                        <a href="views/peliculas/peliculas.html">Películas</a>
+                        <a href="#">Películas</a>
                     </li>
                     <li><a href="../series.html">Series</a></li>
                     <li>
@@ -91,7 +92,7 @@
         </header>
         <div class="container" id="drama">
             <div class="scroll-images">
-                <div class="titDrama">
+                <div class="titleContainer">
                     <h2>Drama</h2>
                     <p> Sumérgete en el apasionante mundo del drama cinematográfico. Descubre historias conmovedoras, personajes inolvidables y emociones intensas en nuestra página de películas. ¡Prepárate para sentir cada momento
                     </p>
@@ -213,7 +214,7 @@
         </div>
         <div class="container" id="comedia">
             <div class="scroll-images">
-                <div class="titDrama">
+                <div class="titleContainer">
                     <h2>Comedia</h2>
                     <p> ¡Prepárate para soltar carcajadas en nuestra página de películas de comedia! Explora un universo de risas desenfrenadas, situaciones hilarantes y personajes extravagantes que te harán reír a carcajadas. Desde enredos cómicos hasta ocurrencias inesperadas, nuestra selección de películas de comedia te garantiza momentos de diversión inigualable. Únete a nosotros y descubre un mundo donde la risa es la protagonista. ¡No podrás contener la alegría!
                     </p>
@@ -337,7 +338,7 @@
         </div>
         <div class="container" id="animacion">
             <div class="scroll-images">
-                <div class="titDrama">
+                <div class="titleContainer">
                     <h2>Animación</h2>
                     <p> Sumérgete en el apasionante mundo del drama cinematográfico. Descubre historias conmovedoras, personajes inolvidables y emociones intensas en nuestra página de películas. ¡Prepárate para sentir cada momento
                     </p>
@@ -482,6 +483,6 @@
 </html>
 <script src="../../Public/js/hamburguer.js"></script>
 <script src="../../Public/js/style.js"></script>
+<script src="../Public/js/modal.js"></script>
 <script src="../../Public/js/scroll.js"></script>
 <script src="../../Public/js/buscador.js"></script>
-<script src="../../Public/js/modal.js"></script>
