--- a/views/series.html
+++ b/views/series.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="../Public/css/normalize.css">
         <link rel="stylesheet" href="../Public/css/style.css" />
         <link rel="shortcut icon" href="Public/contenido/img/Logos/logoEmpresa.png" type="image/x-icon">
         <title>start voyage</title>
@@ -13,9 +14,9 @@
                 <ul class="menu">
                     <li><a href="../index.html">Inicio</a></li>
                     <li>
-                        <a href="views/peliculas/peliculas.html">Películas</a>
+                        <a href="peliculas/peliculas.html">Películas</a>
                     </li>
-                    <li><a href="views/series.html">Series</a></li>
+                    <li><a href="#">Series</a></li>
                     <li>
                         <a href="#">Géneros</a>
                         <ul class="submenu">
@@ -91,7 +92,7 @@
         </header>
         <div class="container" id="drama">
             <div class="scroll-images">
-                <div class="titDrama">
+                <div class="titleContainer">
                     <h2>Drama</h2>
                     <p> Sumérgete en las vidas entrelazadas de un variado grupo de personajes mientras navegan por el amor, la pérdida, la ambición y la redención en una ciudad en constante cambio. Descubre cómo sus decisiones moldean su destino y afectan a quienes los rodean en esta emocionante serie dramática llena de giros inesperados y conexiones profundas.
                     </p>
@@ -229,7 +230,7 @@
         </div>
         <div class="container" id="comedia">
             <div class="scroll-images">
-                <div class="titDrama">
+                <div class="titleContainer">
                     <h2>Comedia</h2>
                     <p> ¡Prepárate para estallar de risa con nuestra serie de comedia llamativa! Acompaña a un grupo de amigos en sus divertidas aventuras y enredos cómicos mientras navegan por la vida cotidiana. Desde citas disparatadas hasta situaciones absurdas, cada episodio te hará reír a carcajadas. ¡No te pierdas esta dosis de diversión en cada temporada
                     </p>
@@ -367,7 +368,7 @@
         </div>
         <div class="container" id="animacion">
             <div class="scroll-images">
-                <div class="titDrama">
+                <div class="titleContainer">
                     <h2>Animación</h2>
                     <p> Sumérgete en un mundo de diversión animada con nuestra serie de animación corta. Cada episodio te llevará a emocionantes aventuras, personajes entrañables y giros sorprendentes, todo en un formato compacto y entretenido. Desde humor ingenioso hasta momentos emocionantes, nuestra serie de animación corta te ofrece un viaje lleno de color y creatividad en cada entrega.
                     </p>
