--- a/Public/css/style.css
+++ b/Public/css/style.css
@@ -115,12 +115,14 @@ body {
     }
     .hamburguesaActive {
         background-color: rgba(48, 48, 48, 0.589);
-        height: 90vh !important;
+       height: 100% !important;
         display: grid !important;
         grid-template-rows: 10% 90% !important;
         z-index: 999 !important;
         position: fixed;
-        top: 0;
+        top: 0 !important;
+        left: 0 !important;
+        bottom: 0 !important;
         width: 100%;
     }
     #navBurguer {
@@ -151,8 +153,7 @@ body {
         width: 100%;
         height: 100%;
         object-fit: contain;
-        filter: invert(100%);
-        -webkit-filter: invert(100%);
+    
     }
     .imgHamburguesaActive {
         display: none;
